# pyfabric-dev

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/: getting-started.md  hooks-reference.md  local-execution.md  source-of-truth-pattern.md  testing.md
examples/minimal-medallion/: README.md  requirements.txt  stage_data.py
examples/minimal-medallion/bronze/10_bronze_ingest_sales.Notebook/: .platform  notebook-content.py
examples/minimal-medallion/common/common_defs.Notebook/: .platform  notebook-content.py
examples/minimal-medallion/common/common_functions.Notebook/: .platform  notebook-content.py
examples/minimal-medallion/config/: lakehouse_config.json  test_batches.json
examples/minimal-medallion/data/: sales.csv
examples/minimal-medallion/gold/30_gold_build_daily_summary.Notebook/: .platform  notebook-content.py
examples/minimal-medallion/sales_etl.DataPipeline/: .platform  pipeline-content.json
examples/minimal-medallion/silver/20_silver_transform_sales.Notebook/: .platform  notebook-content.py
examples/minimal-medallion/src/bronze/: ingest_sales.py
examples/minimal-medallion/src/common/: defs.py  functions.py
examples/minimal-medallion/src/gold/: build_daily_summary.py
examples/minimal-medallion/src/silver/: transform_sales.py
examples/minimal-medallion/tests/: conftest.py  test_gold_build_daily_summary.py  test_silver_transform_sales.py
pyfabric_dev/: __init__.py  defs.py  fabric.py  functions.py  local_config.py  local_env.py  mock_notebookutils.py  spark.py
pyfabric_dev/cli/: generate_notebooks.py  run_notebook.py  run_pipeline.py  run_tests_parallel.py
pyfabric_dev/runners/: __init__.py  hooks.py  notebook.py  pipeline.py
scripts/: release.sh
tests/: test_functions_merge.py  test_generate_notebooks.py  test_smoke.py
(+2 files in other folders)
